Replacing davis.util.js by Underscore.js

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
     <!-- dependencies -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js" type="text/javascript" charset="utf-8"></script>
-
+    <script src="http://documentcloud.github.com/underscore/underscore.js"></script>
     <!-- QUnit -->
     <script src="/tests/javascripts/qunit.js"></script>
     <link rel="stylesheet" href="/tests/stylesheets/qunit.css" type="text/css" media="screen" />
@@ -15,7 +15,6 @@
 
     <!-- davis -->
     <script src="/lib/davis.js"></script>
-    <script src="/lib/davis.utils.js"></script>
     <script src="/lib/davis.listener.js"></script>
     <script src="/lib/davis.logger.js"></script>
     <script src="/lib/davis.route.js"></script>
@@ -35,7 +34,6 @@
     <script src="/tests/test_request.js"></script>
     <script src="/tests/test_event.js"></script>
     <script src="/tests/test_app.js"></script>
-    <script src="/tests/test_utils.js"></script>
 
   </head>
   <body>
